--- a/lilia/lilia.vcxproj
+++ b/lilia/lilia.vcxproj
@@ -42,6 +42,7 @@
     <ClInclude Include="llc_grid_scale.h" />
     <ClInclude Include="llc_grid_view.h" />
     <ClInclude Include="llc_gui.h" />
+    <ClInclude Include="llc_gui_text.h" />
     <ClInclude Include="llc_input.h" />
     <ClInclude Include="llc_layered_view.h" />
     <ClInclude Include="llc_math.h" />
@@ -61,6 +62,7 @@
     <ClCompile Include="llc_framework.cpp" />
     <ClCompile Include="llc_geometry.cpp" />
     <ClCompile Include="llc_gui.cpp" />
+    <ClCompile Include="llc_gui_text.cpp" />
     <ClCompile Include="llc_timer.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -116,6 +118,7 @@
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(ProjectDir)..\..\$(Platform).$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)..\..\obj\$(Platform).$(Configuration)\$(ProjectName)\</IntDir>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
