--- a/lilia/lilia.vcxproj.filters
+++ b/lilia/lilia.vcxproj.filters
@@ -141,6 +141,12 @@
     <ClInclude Include="llc_gui_text.h">
       <Filter>gui</Filter>
     </ClInclude>
+    <ClInclude Include="llc_camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="llc_scene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="llc_timer.cpp">
