--- a/lilia/lilia.vcxproj.filters
+++ b/lilia/lilia.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClInclude Include="llc_scene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="llc_gnd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="llc_timer.cpp">
@@ -175,6 +178,9 @@
     </ClCompile>
     <ClCompile Include="llc_gui_text.cpp">
       <Filter>gui</Filter>
+    </ClCompile>
+    <ClCompile Include="llc_gnd.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
