--- a/lilia/lilia.vcxproj
+++ b/lilia/lilia.vcxproj
@@ -38,7 +38,7 @@
     <ClInclude Include="llc_frameinfo.h" />
     <ClInclude Include="llc_framework.h" />
     <ClInclude Include="llc_geometry.h" />
-    <ClInclude Include="llc_gnd.h" />
+    <ClInclude Include="llc_ro_gnd.h" />
     <ClInclude Include="llc_grid.h" />
     <ClInclude Include="llc_grid_copy.h" />
     <ClInclude Include="llc_grid_scale.h" />
@@ -51,6 +51,8 @@
     <ClInclude Include="llc_matrix.h" />
     <ClInclude Include="llc_particle.h" />
     <ClInclude Include="llc_ptr.h" />
+    <ClInclude Include="llc_ro_rsm.h" />
+    <ClInclude Include="llc_ro_rsw.h" />
     <ClInclude Include="llc_runtime.h" />
     <ClInclude Include="llc_scene.h" />
     <ClInclude Include="llc_texture.h" />
@@ -64,9 +66,11 @@
     <ClCompile Include="llc_display.cpp" />
     <ClCompile Include="llc_framework.cpp" />
     <ClCompile Include="llc_geometry.cpp" />
-    <ClCompile Include="llc_gnd.cpp" />
+    <ClCompile Include="llc_ro_gnd.cpp" />
     <ClCompile Include="llc_gui.cpp" />
     <ClCompile Include="llc_gui_text.cpp" />
+    <ClCompile Include="llc_ro_rsw.cpp" />
+    <ClCompile Include="llc_ro_rsm.cpp" />
     <ClCompile Include="llc_timer.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
