+ Added stream_view<> in order to simplify deserialization.

--- a/lilia/lilia.vcxproj
+++ b/lilia/lilia.vcxproj
@@ -55,6 +55,7 @@
     <ClInclude Include="llc_ro_rsw.h" />
     <ClInclude Include="llc_runtime.h" />
     <ClInclude Include="llc_scene.h" />
+    <ClInclude Include="llc_stream_view.h" />
     <ClInclude Include="llc_texture.h" />
     <ClInclude Include="llc_timer.h" />
     <ClInclude Include="llc_truetype.h" />
