--- a/lilia/lilia.vcxproj.filters
+++ b/lilia/lilia.vcxproj.filters
@@ -117,9 +117,6 @@
     <ClInclude Include="llc_array_view.h">
       <Filter>container</Filter>
     </ClInclude>
-    <ClInclude Include="llc_bit_array_view.h">
-      <Filter>container</Filter>
-    </ClInclude>
     <ClInclude Include="llc_grid.h">
       <Filter>container</Filter>
     </ClInclude>
@@ -159,6 +156,12 @@
     <ClInclude Include="llc_stream_view.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="llc_encoding.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="llc_bit_view.h">
+      <Filter>container</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="llc_timer.cpp">
@@ -195,6 +198,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="llc_ro_rsm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="llc_encoding.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
